--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = unrailedtrain
 description = A cart with the capability to store items.
-depends = carts, default, flowers, luautils
+depends = private_lobby, carts, default, flowers, luautils
